--- a/ASCEND 3/ASCEND 3/ascend-ui/about.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/about.html
@@ -418,11 +418,10 @@
                 <a href="register.html" class="btn btn-primary btn-lg" style="text-decoration: none;">Join the
                     Community</a>
             </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
+        </div> <!-- End about-container -->
 
-        </div>
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/include-components.js"></script>
