--- a/ASCEND 3/ASCEND 3/ascend-ui/contact.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/contact.html
@@ -198,10 +198,10 @@
                 </div>
 
             </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
