--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-all-questions.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-all-questions.html
@@ -129,6 +129,7 @@
                         Urgent Questions
                     </button>
                     <button class="tab-btn" onclick="switchTab('general')">General Questions</button>
+                    <button class="tab-btn" onclick="switchTab('all')">All Questions</button>
                 </div>
 
                 <!-- Filters -->
@@ -166,8 +167,10 @@
             document.querySelectorAll('.tab-btn').forEach(btn => btn.classList.remove('active'));
             if (tab === 'urgent') {
                 document.querySelector('.tab-btn.urgent-tab').classList.add('active');
-            } else {
+            } else if (tab === 'general') {
                 document.querySelectorAll('.tab-btn')[1].classList.add('active');
+            } else {
+                document.querySelectorAll('.tab-btn')[2].classList.add('active');
             }
 
             renderQuestions();
@@ -183,9 +186,11 @@
                 if (!matchesSearch) return false;
 
                 if (currentTab === 'urgent') {
-                    return q.is_urgent;
+                    return q.is_urgent && !q.is_answered;
+                } else if (currentTab === 'general') {
+                    return !q.is_urgent && !q.is_answered;
                 } else {
-                    return !q.is_urgent;
+                    return true; // "all" tab shows everything
                 }
             });
 
@@ -212,8 +217,13 @@
                         <i data-lucide="zap" style="width: 10px; height: 10px;"></i> ${q.bounty} pts
                     </span>` : '';
 
+                const statusBadge = q.is_answered ?
+                    `<span style="background: rgba(16, 185, 129, 0.1); color: #10b981; padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.7rem; border: 1px solid rgba(16, 185, 129, 0.3); margin-left: 0.5rem;">Answered</span>` :
+                    `<span style="background: rgba(239, 68, 68, 0.1); color: #ef4444; padding: 0.25rem 0.5rem; border-radius: 4px; font-size: 0.7rem; border: 1px solid rgba(239, 68, 68, 0.3); margin-left: 0.5rem;">Pending</span>`;
+
                 const cardStyle = q.is_urgent ? '' : '';
                 const avatarStyle = q.is_urgent ? 'border: 1px solid #FFD700; color: #FFD700;' : 'border: 1px solid var(--border-color);';
+                const buttonText = q.is_answered ? 'View Discussion' : 'Answer';
                 const buttonStyle = q.is_urgent ? 'background: #FFD700; color: #000; border: none;' : 'background: linear-gradient(135deg, var(--primary) 0%, #2563eb 100%); color: #ffffff; border: none;';
 
                 const html = `
@@ -223,6 +233,7 @@
                             <div style="font-weight: 500; font-size: 1rem; margin-bottom: 0.25rem;">
                                 ${q.title}
                                 ${urgentBadge}
+                                ${statusBadge}
                             </div>
                             <div style="font-size: 0.875rem; color: var(--text-secondary); margin-bottom: 0.75rem; line-height: 1.5;">${q.content}</div>
                             <div style="display: flex; align-items: center; gap: 1rem; font-size: 0.75rem; color: var(--text-tertiary);">
@@ -230,7 +241,7 @@
                                 <span><i data-lucide="clock" style="width:12px; height:12px; display:inline; vertical-align:middle;"></i> ${q.time}</span>
                             </div>
                         </div>
-                        <button class="btn btn-primary btn-sm" style="${buttonStyle}" onclick="window.location.href='mentor-question-detail.html?id=${q.id}'">Answer</button>
+                        <button class="btn btn-primary btn-sm" style="${buttonStyle}" onclick="window.location.href='mentor-question-detail.html?id=${q.id}'">${buttonText}</button>
                     </div>
                 `;
                 container.insertAdjacentHTML('beforeend', html);
