mentor ma messages nu icon add kariyu and pages sarkha kariya

--- a/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/My-Mentor.html
@@ -216,10 +216,11 @@
                     <p style="color: var(--text-secondary); grid-column: 1/-1; text-align: center;">Loading mentors...
                     </p>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
