--- a/ASCEND 3/ASCEND 3/ascend-ui/admin-dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/admin-dashboard.html
@@ -118,29 +118,28 @@
                 <div class="card" id="usersContainer">
                     <p style="padding: 20px; text-align: center; color: var(--text-secondary);">Loading users...</p>
                 </div>
+            </div> <!-- End main-content -->
 
-            </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-
-        <!-- Right Sidebar -->
-        <aside class="right-sidebar">
-            <div class="card">
-                <h3 style="font-size: 1rem; font-weight: 600; margin-bottom: 1rem;">System Status</h3>
-                <div style="display: flex; flex-direction: column; gap: 1rem;">
-                    <div style="display: flex; justify-content: space-between;">
-                        <span>Database</span>
-                        <span style="color: green;">Operational</span>
-                    </div>
-                    <div style="display: flex; justify-content: space-between;">
-                        <span>API</span>
-                        <span style="color: green;">Operational</span>
+            <!-- Right Sidebar -->
+            <aside class="right-sidebar">
+                <div class="card">
+                    <h3 style="font-size: 1rem; font-weight: 600; margin-bottom: 1rem;">System Status</h3>
+                    <div style="display: flex; flex-direction: column; gap: 1rem;">
+                        <div style="display: flex; justify-content: space-between;">
+                            <span>Database</span>
+                            <span style="color: green;">Operational</span>
+                        </div>
+                        <div style="display: flex; justify-content: space-between;">
+                            <span>API</span>
+                            <span style="color: green;">Operational</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </aside>
-        </div>
+            </aside>
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
