--- a/ASCEND 3/ASCEND 3/ascend-ui/admin-settings.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/admin-settings.html
@@ -95,10 +95,11 @@
                     <p style="padding: 2rem; text-align: center; color: var(--text-secondary);">Settings coming soon.
                     </p>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
