--- a/ASCEND 3/ASCEND 3/ascend-ui/all-questions.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/all-questions.html
@@ -147,11 +147,11 @@
                     <!-- Questions will be loaded here -->
                     <p style="color: var(--text-secondary); text-align: center; padding: 4rem;">Loading questions...</p>
                 </div>
-            </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
