--- a/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/dashboard.html
@@ -259,10 +259,10 @@
                     </div> -->
                 </div>
 
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End page-container -->
+
+            <!-- Footer -->
+            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <div id="systemStatus"
