--- a/ASCEND 3/ASCEND 3/ascend-ui/mentees.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentees.html
@@ -279,11 +279,11 @@
                     <!-- Connected Mentors will be loaded here -->
                     <p style="color: var(--text-secondary); grid-column: 1/-1; text-align: center;">Loading connected
                         mentors...</p>
-                </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+                </div> <!-- End main-content -->
+            </div> <!-- End page-container -->
+
+            <!-- Footer -->
+            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <!-- Message Modal -->
