--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-dashboard.html
@@ -249,10 +249,10 @@
                 </div>
 
             </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <!-- Answer Modal -->
