--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-question-detail.html
@@ -95,10 +95,11 @@
                         <button type="submit" class="btn btn-primary">Post Answer</button>
                     </form>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
