--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmap-detail.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmap-detail.html
@@ -170,16 +170,15 @@
                             Roadmap Modules
                         </h3>
                         <div id="stepsContainer" class="timeline">
-                            <p style="text-align: center; color: var(--text-secondary); padding: 1rem;">Loading
-                                modules...</p>
+                            <p style="color: var(--text-secondary); margin-left: -1rem;">Loading roadmap modules...</p>
                         </div>
                     </div>
                 </div>
-            </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
