--- a/ASCEND 3/ASCEND 3/ascend-ui/question-detail.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/question-detail.html
@@ -194,10 +194,11 @@
                     </form>
                 </div>
             </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+        </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
