--- a/ASCEND 3/ASCEND 3/ascend-ui/student-messages.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/student-messages.html
@@ -365,6 +365,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
 
@@ -576,7 +579,6 @@
             div.className = `message-bubble ${isMe ? 'sent' : 'received'}`;
             div.innerHTML = `
                 ${msg.content}
-                <span class="message-time">${msg.timestamp}</span>
             `;
             area.appendChild(div);
         }
@@ -591,9 +593,7 @@
             renderMessage({
 
                 content: content,
-                timestamp: new Date().toLocaleTimeString([], {
-                    hour: '2-digit', minute: '2-digit'
-                }),
+                timestamp: new Date().toISOString(),
                 is_me: true
             });
             input.value = '';
