--- a/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
@@ -90,11 +90,11 @@
                 <div class="card" id="usersContainer">
                     <p style="text-align: center; color: var(--text-secondary); padding: 2rem;">Loading users...</p>
                 </div>
-            </div>
-            <!-- Footer -->
-            <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-        </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
