--- a/ASCEND 3/ASCEND 3/ascend-ui/career-exploration.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/career-exploration.html
@@ -98,10 +98,11 @@
                         </p>
                     </div>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
