--- a/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmaps.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentor-roadmaps.html
@@ -119,10 +119,11 @@
                 <div id="roadmapsContainer" style="display: grid; gap: 1rem;">
                     <p style="text-align: center; color: var(--text-secondary); padding: 2rem;">Loading roadmaps...</p>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
