--- a/ASCEND 3/ASCEND 3/ascend-ui/mentorship-requests.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/mentorship-requests.html
@@ -68,10 +68,11 @@
                 <div class="card" id="requestsContainer">
                     <p style="text-align: center; color: var(--text-secondary); padding: 2rem;">Loading requests...</p>
                 </div>
-                <!-- Footer -->
-                <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
-            </div>
-        </div>
+            </div> <!-- End main-content -->
+        </div> <!-- End page-container -->
+
+        <!-- Footer -->
+        <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
     <script src="js/navigation.js"></script>
