--- a/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
@@ -18,57 +18,36 @@
 </head>
 
 <body>
-    <aside class="sidebar">
-        <div class="sidebar-logo">
+
+    <!-- Header -->
+    <header class="header" style="left: 0;">
+        <div class="sidebar-logo" style="margin-bottom: 0; padding: 0;">
             <div class="sidebar-logo-icon">
-                <i data-lucide="zap" style="width: 25px; height: 25px;"></i>
+                <i data-lucide="zap" style="width: 25px; height: 25px; fill: #4DA3FF; color: #4DA3FF;"></i>
             </div>
             <div class="sidebar-logo-text">ASCEND</div>
         </div>
-        <nav class="sidebar-nav">
-            <a href="admin-dashboard.html" class="sidebar-nav-item">
-                <i data-lucide="layout-dashboard" style="width: 20px; height: 20px;"></i>
+
+        <nav class="dashboard-nav-group"
+            style="position: absolute; left: 50%; transform: translateX(-50%); display: flex; gap: 2rem; align-items: center;">
+            <a href="admin-dashboard.html" class="sidebar-nav-item"
+                style="margin: 0; border: none; background: transparent; display: flex; align-items: center; gap: 8px; color: var(--text-secondary); text-decoration: none;">
+                <i data-lucide="layout-dashboard" style="width: 18px; height: 18px;"></i>
                 <span>Dashboard</span>
             </a>
-            <a href="admin-users.html" class="sidebar-nav-item active">
-                <i data-lucide="users" style="width: 20px; height: 20px;"></i>
+            <a href="admin-users.html" class="sidebar-nav-item active"
+                style="margin: 0; border: none; background: transparent; display: flex; align-items: center; gap: 8px; color: var(--primary); font-weight: 600; text-decoration: none;">
+                <i data-lucide="users" style="width: 18px; height: 18px;"></i>
                 <span>Manage Users</span>
             </a>
-            <a href="admin-content.html" class="sidebar-nav-item">
-                <i data-lucide="file-text" style="width: 20px; height: 20px;"></i>
-                <span>Content</span>
-            </a>
-            <a href="admin-settings.html" class="sidebar-nav-item">
-                <i data-lucide="settings" style="width: 20px; height: 20px;"></i>
-                <span>Settings</span>
+            <a href="admin-reports.html" class="sidebar-nav-item"
+                style="margin: 0; border: none; background: transparent; display: flex; align-items: center; gap: 8px; color: var(--text-secondary); text-decoration: none;">
+                <i data-lucide="help-circle" style="width: 18px; height: 18px;"></i>
+                <span>Queries</span>
             </a>
         </nav>
-        <div class="sidebar-footer">
-            <div class="sidebar-nav-item" id="collapseBtn">
-                <i data-lucide="chevron-left" style="width: 20px; height: 20px; stroke-width: 1.5;"></i>
-                <span>Collapse</span>
-            </div>
 
-            <a href="login.html" class="sidebar-nav-item" id="logoutBtn">
-                <i data-lucide="log-out" style="width: 20px; height: 20px;"></i>
-                <span>Sign Out</span>
-            </a>
-        </div>
-    </aside>
-
-    <!-- Header -->
-    <header class="header">
-        <div class="header-search">
-            <div class="input-icon">
-                <span data-lucide="search" style="width: 18px; height: 18px; stroke-width: 1.5;"></span>
-                <input type="text" class="input" placeholder="Search users...">
-            </div>
-        </div>
-
-        <div class="header-actions">
-            <button class="btn btn-secondary btn-sm">
-                <i data-lucide="bell" style="width: 18px; height: 18px; stroke-width: 1.5;"></i>
-            </button>
+        <div class="header-actions" style="margin-left: auto;">
             <div class="header-user">
                 <div class="header-user-info">
                     <div class="header-user-name" id="userNameDisplay">Admin</div>
@@ -76,10 +55,14 @@
                 </div>
                 <div class="avatar avatar-md" id="userAvatar">AD</div>
             </div>
+            <a href="login.html" class="btn btn-secondary btn-sm" id="logoutBtn"
+                style="background: none; border: 1px solid var(--border-color); color: var(--text-secondary); text-decoration: none;">
+                <i data-lucide="log-out" style="width: 18px; height: 18px;"></i>
+            </a>
         </div>
     </header>
 
-    <main class="main-layout">
+    <main class="main-layout" style="margin-left: 0;">
         <div class="page-container">
             <div class="main-content">
                 <div class="page-header">
@@ -97,6 +80,7 @@
         <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
+    <script src="js/include-components.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/auth-guard.js"></script>
     <script>
@@ -145,8 +129,8 @@
                                 <tbody>
                         `;
                         data.forEach(u => {
-                            const verifiedBadge = u.role !== 'student' ? (u.is_verified ? '<span class="badge badge-success" style="margin-left: 0.5rem; font-size: 0.7rem;">Verified</span>' : '<span class="badge badge-secondary" style="margin-left: 0.5rem; font-size: 0.7rem;">Pending</span>') : '';
-                            const verifyBtn = (!u.is_verified && u.role !== 'student') ? `<button class="btn btn-primary btn-sm" onclick="verifyUser(${u.id})">Verify</button>` : '';
+                            const verifiedBadge = u.role === 'mentor' ? (u.is_verified ? '<span class="badge badge-success" style="margin-left: 0.5rem; font-size: 0.7rem;">Verified</span>' : '<span class="badge badge-secondary" style="margin-left: 0.5rem; font-size: 0.7rem;">Pending</span>') : '';
+                            const verifyBtn = (!u.is_verified && u.role === 'mentor') ? `<button class="btn btn-primary btn-sm" onclick="verifyUser(${u.id})">Verify</button>` : '';
 
                             tableHtml += `
                                 <tr style="border-bottom: 1px solid var(--border-color);">
