--- a/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
+++ b/ASCEND 3/ASCEND 3/ascend-ui/admin-users.html
@@ -55,10 +55,10 @@
                 </div>
                 <div class="avatar avatar-md" id="userAvatar">AD</div>
             </div>
-            <a href="login.html" class="btn btn-secondary btn-sm" id="logoutBtn"
-                style="background: none; border: 1px solid var(--border-color); color: var(--text-secondary); text-decoration: none;">
+            <button class="btn btn-secondary btn-sm" id="logoutBtn"
+                style="background: none; border: 1px solid var(--border-color); color: var(--text-secondary);">
                 <i data-lucide="log-out" style="width: 18px; height: 18px;"></i>
-            </a>
+            </button>
         </div>
     </header>
 
@@ -80,7 +80,6 @@
         <div id="footer-placeholder" data-src="dashboard-footer.html"></div>
     </main>
 
-    <script src="js/include-components.js"></script>
     <script src="js/navigation.js"></script>
     <script src="js/auth-guard.js"></script>
     <script>
